--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "mongoose": "^8.17.0",
-    "next": "15.4.5",
-    "next-auth": "^5.0.0-beta.29",
+    "@tailwindcss/postcss": "^4.1.18",
+    "bcryptjs": "^3.0.3",
+    "mongoose": "^9.0.2",
+    "next": "16.1.0",
+    "next-auth": "5.0.0-beta.30",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.0.14"
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "@eslint/eslintrc": "^3.3.3",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   }
 }
